crates/keron-lang/tests/corpus/errors/check/if_no_else_value_branch.keron
val r = if true {
  1
}
